syntax = "proto3";
package sentinel;

service SmartSentinel {
  rpc Inspect (TransactionRequest) returns (AgentDecision);
}

message TransactionRequest {
    string user_id = 1;
    double amount = 2;
    string merchant = 3;
    string currency = 4;
    string location = 5;
    int32 user_account_age = 6;
}

message AgentDecision {
  bool allowed = 1;
  string reasoning = 2;
}